--- a/Shiseidme/Themes/UserPortraitView_shiseidme.xib
+++ b/Shiseidme/Themes/UserPortraitView_shiseidme.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="xST-Es-npi" customClass="UserPortraitView_shiseidme" customModule="Shiseidme" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="131" height="135"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default-portrait-placeholder.png" translatesAutoresizingMaskIntoConstraints="NO" id="d4A-t8-kJA">
-                    <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                    <rect key="frame" x="0.0" y="0.0" width="131" height="135"/>
                 </imageView>
                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="rsf-V2-RcI">
-                    <rect key="frame" x="20" y="20" width="20" height="20"/>
+                    <rect key="frame" x="55.5" y="57.5" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="Ja7-YK-z3i"/>
                         <constraint firstAttribute="height" constant="20" id="T7f-QJ-mc6"/>
@@ -27,11 +27,11 @@
                     <color key="color" red="0.0" green="0.81572645030000002" blue="1" alpha="0.87" colorSpace="custom" customColorSpace="sRGB"/>
                 </activityIndicatorView>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uyz-s8-6GE">
-                    <rect key="frame" x="30" y="30" width="40" height="40"/>
-                    <color key="backgroundColor" red="0.083623558282852173" green="0.66497266292572021" blue="0.84832382202148438" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <rect key="frame" x="101" y="105" width="30" height="30"/>
+                    <color key="backgroundColor" red="0.19215686274509802" green="0.6470588235294118" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="40" id="9ci-fM-BXn"/>
-                        <constraint firstAttribute="height" constant="40" id="PzH-gy-Ebu"/>
+                        <constraint firstAttribute="width" constant="30" id="9ci-fM-BXn"/>
+                        <constraint firstAttribute="height" constant="30" id="PzH-gy-Ebu"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
                     <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="5"/>
@@ -50,12 +50,12 @@
             <constraints>
                 <constraint firstItem="rsf-V2-RcI" firstAttribute="centerY" secondItem="xST-Es-npi" secondAttribute="centerY" id="HcE-yt-LPh"/>
                 <constraint firstAttribute="trailing" secondItem="d4A-t8-kJA" secondAttribute="trailing" id="Mro-R9-QzM"/>
+                <constraint firstAttribute="trailing" secondItem="uyz-s8-6GE" secondAttribute="trailing" id="QrD-x8-fQp"/>
                 <constraint firstItem="d4A-t8-kJA" firstAttribute="leading" secondItem="xST-Es-npi" secondAttribute="leading" id="VsN-gU-0Gq"/>
                 <constraint firstAttribute="bottom" secondItem="d4A-t8-kJA" secondAttribute="bottom" id="ZZc-5Y-VRE"/>
-                <constraint firstItem="uyz-s8-6GE" firstAttribute="leading" secondItem="xST-Es-npi" secondAttribute="leading" constant="30" id="e4X-kr-I8q"/>
                 <constraint firstItem="d4A-t8-kJA" firstAttribute="top" secondItem="xST-Es-npi" secondAttribute="top" id="j9Y-FM-xx3"/>
-                <constraint firstItem="uyz-s8-6GE" firstAttribute="top" secondItem="xST-Es-npi" secondAttribute="top" constant="30" id="poF-zW-oFW"/>
                 <constraint firstItem="rsf-V2-RcI" firstAttribute="centerX" secondItem="xST-Es-npi" secondAttribute="centerX" id="pzv-p5-C10"/>
+                <constraint firstAttribute="bottom" secondItem="uyz-s8-6GE" secondAttribute="bottom" id="zrJ-Bt-JkT"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -64,7 +64,7 @@
                 <outlet property="editButton" destination="uyz-s8-6GE" id="YB2-ba-e9I"/>
                 <outlet property="portraitImage" destination="d4A-t8-kJA" id="4dC-xJ-XaH"/>
             </connections>
-            <point key="canvasLocation" x="240" y="433"/>
+            <point key="canvasLocation" x="275.5" y="470.5"/>
         </view>
     </objects>
     <resources>
