Change style un add comment

--- a/Shiseidme/ScreenletsViewControllers/DetailViewController.xib
+++ b/Shiseidme/ScreenletsViewControllers/DetailViewController.xib
@@ -35,6 +35,9 @@
                     <rect key="frame" x="0.0" y="605" width="375" height="62"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="themeName" value="shiseidme"/>
+                    </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5GY-1f-bfc" customClass="ImageDisplayScreenlet">
                     <rect key="frame" x="0.0" y="56" width="375" height="192"/>
