--- a/Shiseidme/Themes/CommentDisplayView_shiseidme.xib
+++ b/Shiseidme/Themes/CommentDisplayView_shiseidme.xib
@@ -11,40 +11,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="ofk-wp-urv" customClass="CommentDisplayView_default">
+        <view contentMode="scaleToFill" id="ofk-wp-urv" customClass="CommentDisplayView_shiseidme" customModule="Shiseidme" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="472" height="121"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsA-4f-URH" userLabel="UserName">
-                    <rect key="frame" x="66" y="8" width="398" height="23"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                    <rect key="frame" x="46" y="8" width="418" height="16"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BYS-C6-vuU" userLabel="UserPortrait" customClass="UserPortraitScreenlet">
-                    <rect key="frame" x="8" y="8" width="50" height="50"/>
+                    <rect key="frame" x="8" y="8" width="30" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="50" id="3Us-Re-q5I"/>
-                        <constraint firstAttribute="height" constant="50" id="LYj-Fk-mMN"/>
+                        <constraint firstAttribute="width" constant="30" id="3Us-Re-q5I"/>
+                        <constraint firstAttribute="height" constant="30" id="LYj-Fk-mMN"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="string" keyPath="themeName" value="shiseidme"/>
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- Edited" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bmx-bE-lyO" userLabel="Edited">
-                    <rect key="frame" x="156" y="39" width="51" height="16"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                    <rect key="frame" x="118.5" y="32" width="41" height="12"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 minutes ago" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T0O-Tl-DWI" userLabel="CreatedDate">
-                    <rect key="frame" x="66" y="39" width="86" height="16"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <rect key="frame" x="46" y="32" width="68.5" height="12"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K19-Wu-62Q" userLabel="Normal state buttons">
-                    <rect key="frame" x="386" y="33" width="78" height="28"/>
+                    <rect key="frame" x="386" y="24.5" width="78" height="28"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mOk-gp-c4D">
                             <rect key="frame" x="0.0" y="0.0" width="30" height="28"/>
@@ -74,7 +74,7 @@
                     </constraints>
                 </view>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ewF-4o-z0M" userLabel="Deleting state buttons">
-                    <rect key="frame" x="365" y="33" width="99" height="28"/>
+                    <rect key="frame" x="365" y="24.5" width="99" height="28"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rt3-lJ-YJQ" userLabel="Confirm">
                             <rect key="frame" x="0.0" y="0.0" width="49" height="28"/>
@@ -104,7 +104,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JUT-Zw-z7I">
-                    <rect key="frame" x="8" y="66" width="456" height="47"/>
+                    <rect key="frame" x="8" y="46" width="456" height="67"/>
                     <attributedString key="attributedText">
                         <fragment content="Body">
                             <attributes>
