Finish login and sign up

--- a/Shiseidme/Themes/LoginView_shiseidme.xib
+++ b/Shiseidme/Themes/LoginView_shiseidme.xib
@@ -76,7 +76,16 @@
                             </constraints>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="16"/>
                             <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="defaultColor">
+                                    <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="highlightColor">
+                                    <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                             <connections>
+                                <action selector="textFieldDidChanged:" destination="iN0-l3-epB" eventType="editingChanged" id="Fdr-Aa-IwL"/>
                                 <outlet property="delegate" destination="iN0-l3-epB" id="Ljx-cw-S27"/>
                             </connections>
                         </textField>
@@ -89,8 +98,15 @@
                             <textInputTraits key="textInputTraits" returnKeyType="send" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="default-lock-icon.png"/>
+                                <userDefinedRuntimeAttribute type="color" keyPath="defaultColor">
+                                    <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="highlightColor">
+                                    <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                             <connections>
+                                <action selector="textFieldDidChanged:" destination="iN0-l3-epB" eventType="editingChanged" id="dUg-he-Cii"/>
                                 <outlet property="delegate" destination="iN0-l3-epB" id="YVX-sf-eSF"/>
                             </connections>
                         </textField>
